UCSFD8-209 - Fixes to twitter breaking on small screens.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -4917,11 +4917,11 @@ a.icon-education, a.icon-doctor, a.icon-campus, a.icon-money, a.icon-awards, a.i
   margin-top: 80px; }
 
 .twitter-wrapper {
+  background: #f0faff;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (auto)[2];
-      grid-template-columns: repeat(2, auto);
-  background: #fff; }
+      grid-template-columns: repeat(2, auto); }
 
 .twitter-wrapper__space {
   -ms-grid-column: 1;
@@ -4937,10 +4937,9 @@ a.icon-education, a.icon-doctor, a.icon-campus, a.icon-money, a.icon-awards, a.i
       grid-template-columns: repeat(2, auto);
   -ms-grid-column-align: end;
       justify-self: end;
-  background: #f0faff;
   padding: 72px 0;
   padding-left: 120px; }
-  @media (min-width: 600px) {
+  @media (min-width: 1440px) {
     .twitter {
       width: 1360px; } }
 
