--- a/docroot/themes/custom/ucsf/scss/components/_twitter.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_twitter.scss
@@ -1,7 +1,7 @@
 .twitter-wrapper {
+  background: $twitter-blue;
   display: grid;
   grid-template-columns: repeat(2, auto);
-  background: $white;
 }
 
 .twitter-wrapper__space {
@@ -14,11 +14,10 @@
   display: grid;
   grid-template-columns: repeat(2, auto);
   justify-self: end;
-  background: $twitter-blue;
   padding: $space-nine 0;
   padding-left: $space-fifteen;
 
-  @include breakpoint($bp-medium) {
+  @include breakpoint($bp-full) {
     width: 1360px;
   }
 }
